<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱乐兔</string>
    <string name="home">首页</string>
    <string name="square">广场</string>
    <string name="user">我的</string>
    <string name="message">消息</string>
    <string name="userMessage">个人资料</string>
    <string name="userRegister">签到</string>
    <string name="myOrder">我的订单</string>
    <string name="myCollect">我的收藏</string>
    <string name="myDynamic">我的动态</string>
    <string name="i_am_bussiness">我要成为趴主</string>
    <string name="setting">设置</string>
    <string name="next">下一步</string>
    <string name="getEncode">获取验证码</string>
    <string name="inputEncode">输入验证码</string>
    <string name="please_input_telphone_number">请输入手机号</string>
    <string name="confirm">确认</string>
    <string name="login">登陆</string>
    <string name="input_psw">输入密码</string>
    <string name="account_binding">帐号绑定</string>
    <string name="about_us">关于我们</string>
    <string name="exit_login">退出登陆</string>
    <string name="feedBack">意见反馈</string>
    <string name="weibo">微博</string>
    <string name="weixin">微信</string>
    <string name="qq">QQ</string>
    <string name="mobile">手机</string>
    <string name="no_binding">未绑定</string>
    <string name="choose_other_count_login">或用其他账号登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="user_register">用户注册</string>
    <string name="homeparty">轰趴兔</string>
    <string name="book_now">立即预定</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">显示更多</string>
    <string name="my_active">我的活动</string>
    <string name="qiandao">签到</string>
    <string name="please_input_value_key">请输入关键字</string>
    <string name="SwitchToTheMerchant">切换成商家</string>
    <string name="SwitchToTheUser">切换成用户</string>
    <string name="tgi_tab_order">订单</string>
    <string name="tgj_tab_messge">消息</string>
    <string name="tgj_tab_user">我的</string>
     <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
     <string name="viewpager_indicator">%1$d/%2$d</string>

</resources>